--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "arabic-digits": "^1.0.2",
     "core-js": "^3.6.5",
+    "globalize": "^1.6.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-chimera": "^3.0.2",
+    "vue-numeral-filter": "^2.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
