--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "numeral": "^2.0.6",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.9.0",
     "vue-chimera": "^3.0.2",
     "vue-numeral-filter": "^2.0.0",
     "vue-router": "^3.2.0",
