--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "qs": "^6.10.1",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.9.0",
     "vue-chimera": "^3.0.2",
