--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,17 @@ on:
 jobs:
   cron:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
     steps:
       - name: callfitg
+      - id: step1
         run: |
           curl --request GET \
           --url 'https://fitg.vercel.app/#/' \
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          workflow_output2:
-            description: "The job output"
-            value: ${{ jobs.callfitg }}
+          ::set-output name=test::
+  job2:
+    runs-on: ubuntu-latest
+    needs: cron
+    steps:
+      - run: echo ${{needs.cron.outputs.output1}}
