--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: cron
     steps:
+      - name: result
       - run: echo ${{needs.cron.outputs.output1}}
