--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
-name: cron
-
-# Controls when the workflow will run
+name: 15-minute-cron
 on:
   schedule:
     - cron: '*/15 * * * *'
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: callfitg
-      - id: step1
+      - name: Call our app
         run: |
           curl --request GET \
           --url 'https://fitg.vercel.app/#/' \
